[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools_scm[toml]>=6.2"]

[project]
authors = [
  {name = "Eric Roberts", email = "eric.roberts@uhn.ca"},
  {name = "Michael Hoffman", email = "michael.hoffman@utoronto.ca"},
  {name = "Mehran Karimzadeh"},
  {name = "Carl Ernst"},
  {name = "Anshul Kundaje"},
]
classifiers = [
  "Natural Language :: English",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Operating System :: Unix",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3",
]
description = "Umap and Bismap: tools for genome and methylome mappability"
dependencies = [
  "numpy",
  "pandas",
]
dynamic = ["version"]
name = "umap"
readme = "README.rst"
requires-python = ">=3.9"

[project.license]
text = "GPL-3.0-only"

[project.scripts]
ubismap = "umap.ubismap:main"
ubismap-generate-kmers = "umap.get_kmers:main"

[project.urls]
"Bug Tracker" = "https://github.com/hoffmangroup/umap/issues"
"Download" = "https://pypi.python.org/pypi/bismap"
"Homepage" = "https://hoffmanlab.org/proj/bismap"

[tool.setuptools]
packages = ["umap"]

# Enable version inference from scm
[tool.setuptools_scm]

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
combine_star = true
float_to_top = true
force_single_line = false
profile = "google"
py_version = 3
